# GTUCourses

2018_Operating_Systems_HWs/: README.md
2018_Operating_Systems_HWs/HW3/: makefile
CSE321-Intro.-To-Algorithm-Design/: README.md
CSE321-Intro.-To-Algorithm-Design/HW2/: TOHtime[141044045].py  findRottenWalnut[141044045].py
CSE321-Intro.-To-Algorithm-Design/HW3/: assistantship_141044045.py  labify_141044045.py
CSE321-Intro.-To-Algorithm-Design/HW4/: find_kth_book_1_141044045.py  find_kth_book_2_141044045.py  lcp_141044045.py  quickSortsComp_141044045.py  subarray_finder_141044045.py
CSE321-Intro.-To-Algorithm-Design/HW5/: decentNumber_141044045.py  maximum_cost_141044045.py  theft_141044045.py
Computer-Organization-2017/: README.md
Computer-Organization-2017/Final_Project/: Burak_Akten_141044045.qar
Computer-Organization-2017/Project1/: AKTEN_BURAK_141044045.asm  AKTEN_BURAK_141044045.qar
Computer-Organization-2017/Project2/: 141044045.qar
DataStructures_Hws_2017/: README.md
DataStructures_Hws_2017/HW01/: LibraryManagmentSys.java  LibrarySystem.java  Staff.java  Users.java  mainTester.java  makefile
DataStructures_Hws_2017/HW06/: freq.txt
DataStructures_Hws_2017/HW09/: Rapor.odt
Object-Oriented-Programming-CPP-2016-/: README.md
Programming-Languages-2017/: README.md
RealTimeSytems/: README.md
RealTimeSytems/HW1/: CMakeLists.txt  HW1_Report.odt  ITimer.h  Test_main.cpp  Timer.cpp  Timer.h
RealTimeSytems/HW2/: CMakeLists.txt  GtuMutex.cpp  GtuMutex.h  HW2_Report.odt  testMain.cpp
System_Hws_2017/: README.md
System_Hws_2017/HW02/: ReadMe  (+2 more)
(+403 files in other folders)
